--- a/style.css
+++ b/style.css
@@ -15,6 +15,9 @@ header{
     font-size:1.5rem;
 }
 
+h1{
+    text-shadow: 1px 4px 3px black;
+}
 .input-button{
     display: flex;
     justify-content: center;
