--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
     color: white;
     font-family: "poppins", sans-serif;
     min-height: 100vh;
+    position: relative;
 }
 
 header{
@@ -31,14 +32,14 @@ header, form{
     text-align: center;
 }
 
-form input, form button{
+form input, form button,.modal-input{
     padding:0.5rem;
     font-size: 1.5rem;
     border:none;
     background: white;
 }
 
-form input{
+form input,.modal-input{
     width: 80%;
 }
 
@@ -84,7 +85,7 @@ form button:hover{
     white-space: nowrap;
 }
 
-.completed-btn,.trash-btn {
+.completed-btn,.trash-btn,.edit-btn{
     background-color: #ff6f47;
     padding:1rem;
     font-size: 1rem;
@@ -98,11 +99,15 @@ form button:hover{
     background:rgb(73,204,73);
 }
 
+.edit-btn{
+    background:rgb(234 213 91);
+}
+
 .todo-item{
     padding:0rem 0.5rem;
 }
 
-.fa-trash, .fa-check{
+.fa-trash, .fa-check,.fa-edit{
     pointer-events: none;
 }
 
@@ -154,6 +159,53 @@ select{
     background-color:white;
     color:#ff6f47;
 }
+
+.modal{
+    width:100%;
+    height:100%;
+    display: none;
+    justify-content: center;
+    align-items: center;  
+    z-index: 1;
+    position: absolute;
+    top: 0;
+    background-color: rgba(0,0,0,0.4);
+    opacity:0;    
+}
+
+.modal-container{
+    width:30%;
+    background-image:linear-gradient(120deg, #e2c35d, #d88771);
+}
+
+.modal-header,.modal-footer{
+    padding:8px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.modal-body{
+    padding:15px 5px;
+    display: flex;
+    justify-content:center
+}
+
+.save,.cancel{
+    width:70px;
+    height:30px;
+    background-color: #e6281a;
+    text-align: center;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.status{
+    display:none;
+    align-items: center;
+    justify-content: center;
+    color:rgb(0, 0, 0);
+}
+
 @media screen and (max-width:680px){
     form input{
         width: 50%;
@@ -164,7 +216,12 @@ select{
     .todo-list{
         max-width: 90%;
     }
+
     form{
         flex-direction: column;
+    }
+
+    .modal-container{
+        width:50%;
     }
 }
